--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,14 +7,20 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.example.lab1.ui.home.HomeFragment"
+        android:name="com.example.lab1.ui_fragments.home.HomeFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.example.lab1.ui.dashboard.DashboardFragment"
+        android:name="com.example.lab1.ui_fragments.dashboard.DashboardFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_dashboard" />
+
+    <fragment
+        android:id="@+id/navigation_movies"
+        android:name="com.example.lab1.ui_fragments.movie_list.MovieListFragment"
+        android:label="@string/title_movies"
+        tools:layout="@layout/fragment_movies_list" />
 
 </navigation>
