--- a/app/src/main/res/layout/display_movie_item.xml
+++ b/app/src/main/res/layout/display_movie_item.xml
@@ -7,6 +7,16 @@
     android:layout_height="match_parent">
 
     <ImageView
+        android:id="@+id/deleteButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_delete" />
+
+    <ImageView
         android:id="@+id/poster"
         android:layout_width="130dp"
         android:layout_height="159dp"
@@ -25,13 +35,13 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="8dp"
         android:padding="2dp"
         android:text="Medium Text"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:textColor="#4d4d4d"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/deleteButton"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/poster"
         app:layout_constraintTop_toTopOf="parent" />
