--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -16,4 +16,9 @@
         android:icon="@android:drawable/btn_star_big_off"
         android:title="@string/title_movies" />
 
+    <item
+        android:id="@+id/navigation_pics"
+        android:icon="@android:drawable/btn_star_big_off"
+        android:title="@string/title_pics" />
+
 </menu>
