--- a/app/src/main/res/layout/pics_item.xml
+++ b/app/src/main/res/layout/pics_item.xml
@@ -8,8 +8,10 @@
 
     <ImageView
         android:id="@+id/galleryImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/no_pic" />
